tests/miniJava/pos/001115_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends java { int [] java ; }
