tests/miniJava/neg/005172_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] ) ) { return 0 ; } }
